# TangledLaternScene_Graphics

./: .gitattributes  CMakeLists.txt  README.md
assets/models/: boat.mtl  castle.mtl  flower.mtl  island.mtl  lantern.mtl
headers/: Camera.hpp  Mesh.hpp  Model.hpp  Shader.hpp
shaders/: lighting.frag  lighting.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  water.frag  water.vert
src/: Camera.cpp  Mesh.cpp  Model.cpp  Shader.cpp  main.cpp
